@@ -6,6 +6,7 @@ import org.junit.jupiter.api.TestMethodOrder;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
 
 import static com.google.common.truth.Truth.assertThat;
 
@@ -16,7 +17,7 @@ public class ListExercisesTest {
     @Order(0)
     @DisplayName("Test sum correctness")
     public void testSum() {
-        List<Integer> lst1 = List.of(1, 2, 3, 4);
+        List<Integer> lst1 = Arrays.asList(1, 2, 3, 4);
         List<Integer> lst2 = new ArrayList<>();
 
         assertThat(ListExercises.sum(lst1)).isEqualTo(10);
@@ -27,8 +28,8 @@ public class ListExercisesTest {
     @Order(1)
     @DisplayName("Test evens correctness")
     public void testEvens() {
-        List<Integer> lst = List.of(1, 2, 3, 4, 5, 6);
-        List<Integer> lstExpected = List.of(2, 4, 6);
+        List<Integer> lst = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> lstExpected = Arrays.asList(2, 4, 6);
 
         List<Integer> res = ListExercises.evens(lst);
 
@@ -39,10 +40,10 @@ public class ListExercisesTest {
     @Order(2)
     @DisplayName("Test common correctness")
     public void testCommon() {
-        List<Integer> lst1 = List.of(1, 2, 3, 4, 5, 6);
-        List<Integer> lst2 = List.of(4, 5, 6, 7, 8, 9);
+        List<Integer> lst1 = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> lst2 = Arrays.asList(4, 5, 6, 7, 8, 9);
         List<Integer> lst3 = new ArrayList<>();
-        List<Integer> lstExpected = List.of(4, 5, 6);
+        List<Integer> lstExpected = Arrays.asList(4, 5, 6);
 
         List<Integer> res1 = ListExercises.common(lst1, lst2);
         List<Integer> res2 = ListExercises.common(lst2, lst3);
@@ -55,7 +56,7 @@ public class ListExercisesTest {
     @Order(3)
     @DisplayName("Test countOccurrencesOfC correctness")
     public void testCountOccurrencesOfC() {
-        List<String> lst = List.of("hello", "world", "welcome");
+        List<String> lst = Arrays.asList("hello", "world", "welcome");
 
         assertThat(ListExercises.countOccurrencesOfC(lst, 'o')).isEqualTo(3);
         assertThat(ListExercises.countOccurrencesOfC(lst, 'a')).isEqualTo(0);
